Follow changes of `loadFile`. Fix bug with z-index positioning.

--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -7,6 +7,7 @@
 	align-items: center;
 	height: index.$input-main-height + index.$row-padding + index.$row-padding;
 	background: rgba(180, 180, 180, 1);
+	z-index: 1;
 }
 
 .load
